# TinySoul

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/analysis/: coding.md  risk.md
docs/article/: wechat_platform_tinysoul_v2.0.md
docs/module/: action.md  context.md  infra.md  llm.md  loop.md  project_analysis.md  prompt.md  trap.md
docs/todo/: AITask-multimodal.md  Destructive-action-confirmation.md  Dispatcher-cancel.md  Git-workspace-boundary.md  On-going-action.md  Prompt-context-trimming.md  Sandbox-isolation.md  SubprocessExecutor.md  TypedDict.md
home/agent/: AGENT.md  IDENTITY.md  USER.md
tests/: conftest.py  run_tests.md
tests/action/: test_system.py
tests/helpers/: __init__.py  assertions.py  factories.py  fakes.py
tests/infra/: test_bootstrap_no_api_key.py  test_logger.py  test_sandbox.py  test_settings.py  test_text_resources.py
tests/integration/: __init__.py  test_end_to_end_dog_weight.py  test_end_to_end_workspace.py  test_provider_glm.py  test_provider_kimi.py
tests/llm/: test_interpreter.py  test_prompt.py  test_task.py
tests/loop/: test_context.py  test_loop.py  test_loop_error_recovery.py  test_loop_step3_ack.py  test_loop_steps.py  test_loop_suspend_resume.py  test_loop_termination.py  test_parallel_dispatcher.py  test_query.py
tests/prompt/: test_prompt_system.py
tests/trap/: test_interrupt_handler.py  test_trap.py  test_trap_control_flow.py
tinysoul/action/: __init__.py
tinysoul/context/: __init__.py  ongoing.py  protocols.py
tinysoul/infra/: __init__.py  capabilities.py  logger.py  (+3 more)
(+139 files in other folders)
