[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinysoul"
version = "0.1.0"
description = "A lightweight LLM Agent framework prototype"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tinysoul*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
